// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SARIF alpine 1`] = `
{
  "$schema": "https://docs.oasis-open.org/sarif/sarif/v2.1.0/errata01/os/schemas/sarif-schema-2.1.0.json",
  "runs": [
    {
      "results": [
        {
          "locations": [
            {
              "logicalLocations": [
                {
                  "fullyQualifiedName": "",
                  "name": "/lib/apk/db/installed",
                },
              ],
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "image//lib/apk/db/installed",
                },
                "region": {
                  "endColumn": 1,
                  "endLine": 1,
                  "startColumn": 1,
                  "startLine": 1,
                },
              },
            },
          ],
          "message": {
            "text": "The path /lib/apk/db/installed reports libvncserver at version 0.9.9  which is a vulnerable (apk) package installed in the container",
          },
          "ruleId": "CVE-2014-6051-libvncserver",
        },
        {
          "locations": [
            {
              "logicalLocations": [
                {
                  "fullyQualifiedName": "",
                  "name": "/lib/apk/db/installed",
                },
              ],
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "image//lib/apk/db/installed",
                },
                "region": {
                  "endColumn": 1,
                  "endLine": 1,
                  "startColumn": 1,
                  "startLine": 1,
                },
              },
            },
          ],
          "message": {
            "text": "The path /lib/apk/db/installed reports libvncserver at version 0.9.9  which is a vulnerable (apk) package installed in the container",
          },
          "ruleId": "CVE-2014-6052-libvncserver",
        },
        {
          "locations": [
            {
              "logicalLocations": [
                {
                  "fullyQualifiedName": "",
                  "name": "/lib/apk/db/installed",
                },
              ],
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "image//lib/apk/db/installed",
                },
                "region": {
                  "endColumn": 1,
                  "endLine": 1,
                  "startColumn": 1,
                  "startLine": 1,
                },
              },
            },
          ],
          "message": {
            "text": "The path /lib/apk/db/installed reports libvncserver at version 0.9.9  which is a vulnerable (apk) package installed in the container",
          },
          "ruleId": "CVE-2014-6053-libvncserver",
        },
        {
          "locations": [
            {
              "logicalLocations": [
                {
                  "fullyQualifiedName": "",
                  "name": "/lib/apk/db/installed",
                },
              ],
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "image//lib/apk/db/installed",
                },
                "region": {
                  "endColumn": 1,
                  "endLine": 1,
                  "startColumn": 1,
                  "startLine": 1,
                },
              },
            },
          ],
          "message": {
            "text": "The path /lib/apk/db/installed reports libvncserver at version 0.9.9  which is a vulnerable (apk) package installed in the container",
          },
          "ruleId": "CVE-2014-6054-libvncserver",
        },
        {
          "locations": [
            {
              "logicalLocations": [
                {
                  "fullyQualifiedName": "",
                  "name": "/lib/apk/db/installed",
                },
              ],
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "image//lib/apk/db/installed",
                },
                "region": {
                  "endColumn": 1,
                  "endLine": 1,
                  "startColumn": 1,
                  "startLine": 1,
                },
              },
            },
          ],
          "message": {
            "text": "The path /lib/apk/db/installed reports libvncserver at version 0.9.9  which is a vulnerable (apk) package installed in the container",
          },
          "ruleId": "CVE-2014-6055-libvncserver",
        },
        {
          "locations": [
            {
              "logicalLocations": [
                {
                  "fullyQualifiedName": "",
                  "name": "/lib/apk/db/installed",
                },
              ],
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "image//lib/apk/db/installed",
                },
                "region": {
                  "endColumn": 1,
                  "endLine": 1,
                  "startColumn": 1,
                  "startLine": 1,
                },
              },
            },
          ],
          "message": {
            "text": "The path /lib/apk/db/installed reports libvncserver at version 0.9.9  which is a vulnerable (apk) package installed in the container",
          },
          "ruleId": "CVE-2016-9941-libvncserver",
        },
        {
          "locations": [
            {
              "logicalLocations": [
                {
                  "fullyQualifiedName": "",
                  "name": "/lib/apk/db/installed",
                },
              ],
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "image//lib/apk/db/installed",
                },
                "region": {
                  "endColumn": 1,
                  "endLine": 1,
                  "startColumn": 1,
                  "startLine": 1,
                },
              },
            },
          ],
          "message": {
            "text": "The path /lib/apk/db/installed reports libvncserver at version 0.9.9  which is a vulnerable (apk) package installed in the container",
          },
          "ruleId": "CVE-2016-9942-libvncserver",
        },
        {
          "locations": [
            {
              "logicalLocations": [
                {
                  "fullyQualifiedName": "",
                  "name": "/lib/apk/db/installed",
                },
              ],
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "image//lib/apk/db/installed",
                },
                "region": {
                  "endColumn": 1,
                  "endLine": 1,
                  "startColumn": 1,
                  "startLine": 1,
                },
              },
            },
          ],
          "message": {
            "text": "The path /lib/apk/db/installed reports libvncserver at version 0.9.9  which is a vulnerable (apk) package installed in the container",
          },
          "ruleId": "CVE-2018-7225-libvncserver",
        },
        {
          "locations": [
            {
              "logicalLocations": [
                {
                  "fullyQualifiedName": "",
                  "name": "/lib/apk/db/installed",
                },
              ],
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "image//lib/apk/db/installed",
                },
                "region": {
                  "endColumn": 1,
                  "endLine": 1,
                  "startColumn": 1,
                  "startLine": 1,
                },
              },
            },
          ],
          "message": {
            "text": "The path /lib/apk/db/installed reports libvncserver at version 0.9.9  which is a vulnerable (apk) package installed in the container",
          },
          "ruleId": "CVE-2019-15681-libvncserver",
        },
        {
          "locations": [
            {
              "logicalLocations": [
                {
                  "fullyQualifiedName": "",
                  "name": "/lib/apk/db/installed",
                },
              ],
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "image//lib/apk/db/installed",
                },
                "region": {
                  "endColumn": 1,
                  "endLine": 1,
                  "startColumn": 1,
                  "startLine": 1,
                },
              },
            },
          ],
          "message": {
            "text": "The path /lib/apk/db/installed reports libvncserver at version 0.9.9  which is a vulnerable (apk) package installed in the container",
          },
          "ruleId": "CVE-2019-20839-libvncserver",
        },
        {
          "locations": [
            {
              "logicalLocations": [
                {
                  "fullyQualifiedName": "",
                  "name": "/lib/apk/db/installed",
                },
              ],
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "image//lib/apk/db/installed",
                },
                "region": {
                  "endColumn": 1,
                  "endLine": 1,
                  "startColumn": 1,
                  "startLine": 1,
                },
              },
            },
          ],
          "message": {
            "text": "The path /lib/apk/db/installed reports libvncserver at version 0.9.9  which is a vulnerable (apk) package installed in the container",
          },
          "ruleId": "CVE-2019-20840-libvncserver",
        },
        {
          "locations": [
            {
              "logicalLocations": [
                {
                  "fullyQualifiedName": "",
                  "name": "/lib/apk/db/installed",
                },
              ],
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "image//lib/apk/db/installed",
                },
                "region": {
                  "endColumn": 1,
                  "endLine": 1,
                  "startColumn": 1,
                  "startLine": 1,
                },
              },
            },
          ],
          "message": {
            "text": "The path /lib/apk/db/installed reports libvncserver at version 0.9.9  which is a vulnerable (apk) package installed in the container",
          },
          "ruleId": "CVE-2020-14397-libvncserver",
        },
        {
          "locations": [
            {
              "logicalLocations": [
                {
                  "fullyQualifiedName": "",
                  "name": "/lib/apk/db/installed",
                },
              ],
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "image//lib/apk/db/installed",
                },
                "region": {
                  "endColumn": 1,
                  "endLine": 1,
                  "startColumn": 1,
                  "startLine": 1,
                },
              },
            },
          ],
          "message": {
            "text": "The path /lib/apk/db/installed reports libvncserver at version 0.9.9  which is a vulnerable (apk) package installed in the container",
          },
          "ruleId": "CVE-2020-14399-libvncserver",
        },
        {
          "locations": [
            {
              "logicalLocations": [
                {
                  "fullyQualifiedName": "",
                  "name": "/lib/apk/db/installed",
                },
              ],
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "image//lib/apk/db/installed",
                },
                "region": {
                  "endColumn": 1,
                  "endLine": 1,
                  "startColumn": 1,
                  "startLine": 1,
                },
              },
            },
          ],
          "message": {
            "text": "The path /lib/apk/db/installed reports libvncserver at version 0.9.9  which is a vulnerable (apk) package installed in the container",
          },
          "ruleId": "CVE-2020-14400-libvncserver",
        },
        {
          "locations": [
            {
              "logicalLocations": [
                {
                  "fullyQualifiedName": "",
                  "name": "/lib/apk/db/installed",
                },
              ],
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "image//lib/apk/db/installed",
                },
                "region": {
                  "endColumn": 1,
                  "endLine": 1,
                  "startColumn": 1,
                  "startLine": 1,
                },
              },
            },
          ],
          "message": {
            "text": "The path /lib/apk/db/installed reports libvncserver at version 0.9.9  which is a vulnerable (apk) package installed in the container",
          },
          "ruleId": "CVE-2020-14401-libvncserver",
        },
        {
          "locations": [
            {
              "logicalLocations": [
                {
                  "fullyQualifiedName": "",
                  "name": "/lib/apk/db/installed",
                },
              ],
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "image//lib/apk/db/installed",
                },
                "region": {
                  "endColumn": 1,
                  "endLine": 1,
                  "startColumn": 1,
                  "startLine": 1,
                },
              },
            },
          ],
          "message": {
            "text": "The path /lib/apk/db/installed reports libvncserver at version 0.9.9  which is a vulnerable (apk) package installed in the container",
          },
          "ruleId": "CVE-2020-14402-libvncserver",
        },
        {
          "locations": [
            {
              "logicalLocations": [
                {
                  "fullyQualifiedName": "",
                  "name": "/lib/apk/db/installed",
                },
              ],
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "image//lib/apk/db/installed",
                },
                "region": {
                  "endColumn": 1,
                  "endLine": 1,
                  "startColumn": 1,
                  "startLine": 1,
                },
              },
            },
          ],
          "message": {
            "text": "The path /lib/apk/db/installed reports libvncserver at version 0.9.9  which is a vulnerable (apk) package installed in the container",
          },
          "ruleId": "CVE-2020-14403-libvncserver",
        },
        {
          "locations": [
            {
              "logicalLocations": [
                {
                  "fullyQualifiedName": "",
                  "name": "/lib/apk/db/installed",
                },
              ],
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "image//lib/apk/db/installed",
                },
                "region": {
                  "endColumn": 1,
                  "endLine": 1,
                  "startColumn": 1,
                  "startLine": 1,
                },
              },
            },
          ],
          "message": {
            "text": "The path /lib/apk/db/installed reports libvncserver at version 0.9.9  which is a vulnerable (apk) package installed in the container",
          },
          "ruleId": "CVE-2020-14404-libvncserver",
        },
        {
          "locations": [
            {
              "logicalLocations": [
                {
                  "fullyQualifiedName": "",
                  "name": "/lib/apk/db/installed",
                },
              ],
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "image//lib/apk/db/installed",
                },
                "region": {
                  "endColumn": 1,
                  "endLine": 1,
                  "startColumn": 1,
                  "startLine": 1,
                },
              },
            },
          ],
          "message": {
            "text": "The path /lib/apk/db/installed reports libvncserver at version 0.9.9  which is a vulnerable (apk) package installed in the container",
          },
          "ruleId": "CVE-2020-14405-libvncserver",
        },
        {
          "locations": [
            {
              "logicalLocations": [
                {
                  "fullyQualifiedName": "",
                  "name": "/lib/apk/db/installed",
                },
              ],
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "image//lib/apk/db/installed",
                },
                "region": {
                  "endColumn": 1,
                  "endLine": 1,
                  "startColumn": 1,
                  "startLine": 1,
                },
              },
            },
          ],
          "message": {
            "text": "The path /lib/apk/db/installed reports libvncserver at version 0.9.9  which is a vulnerable (apk) package installed in the container",
          },
          "ruleId": "CVE-2020-25708-libvncserver",
        },
      ],
      "tool": {
        "driver": {
          "informationUri": "https://github.com/anchore/grype",
          "name": "grype",
          "rules": [
            {
              "fullDescription": {
                "text": "Integer overflow in the MallocFrameBuffer function in vncviewer.c in LibVNCServer 0.9.9 and earlier allows remote VNC servers to cause a denial of service (crash) and possibly execute arbitrary code via an advertisement for a large screen size, which triggers a heap-based buffer overflow.",
              },
              "help": {
                "markdown": "**Vulnerability CVE-2014-6051**
| Severity | Package | Version | Fix Version | Type | Location | Data Namespace | Link |
| --- | --- | --- | --- | --- | --- | --- | --- |
| high  | libvncserver  | 0.9.9  |   | apk  | /lib/apk/db/installed  | nvd:cpe  | [CVE-2014-6051](https://nvd.nist.gov/vuln/detail/CVE-2014-6051)  |
",
                "text": "Vulnerability CVE-2014-6051
Severity: high
Package: libvncserver
Version: 0.9.9
Fix Version: 
Type: apk
Location: /lib/apk/db/installed
Data Namespace: nvd:cpe
Link: [CVE-2014-6051](https://nvd.nist.gov/vuln/detail/CVE-2014-6051)",
              },
              "helpUri": "https://github.com/anchore/grype",
              "id": "CVE-2014-6051-libvncserver",
              "name": "ApkMatcherCpeMatch",
              "properties": {
                "security-severity": "7.5",
              },
              "shortDescription": {
                "text": "CVE-2014-6051 high vulnerability for libvncserver package",
              },
            },
            {
              "fullDescription": {
                "text": "The HandleRFBServerMessage function in libvncclient/rfbproto.c in LibVNCServer 0.9.9 and earlier does not check certain malloc return values, which allows remote VNC servers to cause a denial of service (application crash) or possibly execute arbitrary code by specifying a large screen size in a (1) FramebufferUpdate, (2) ResizeFrameBuffer, or (3) PalmVNCReSizeFrameBuffer message.",
              },
              "help": {
                "markdown": "**Vulnerability CVE-2014-6052**
| Severity | Package | Version | Fix Version | Type | Location | Data Namespace | Link |
| --- | --- | --- | --- | --- | --- | --- | --- |
| high  | libvncserver  | 0.9.9  |   | apk  | /lib/apk/db/installed  | nvd:cpe  | [CVE-2014-6052](https://nvd.nist.gov/vuln/detail/CVE-2014-6052)  |
",
                "text": "Vulnerability CVE-2014-6052
Severity: high
Package: libvncserver
Version: 0.9.9
Fix Version: 
Type: apk
Location: /lib/apk/db/installed
Data Namespace: nvd:cpe
Link: [CVE-2014-6052](https://nvd.nist.gov/vuln/detail/CVE-2014-6052)",
              },
              "helpUri": "https://github.com/anchore/grype",
              "id": "CVE-2014-6052-libvncserver",
              "name": "ApkMatcherCpeMatch",
              "properties": {
                "security-severity": "7.5",
              },
              "shortDescription": {
                "text": "CVE-2014-6052 high vulnerability for libvncserver package",
              },
            },
            {
              "fullDescription": {
                "text": "The rfbProcessClientNormalMessage function in libvncserver/rfbserver.c in LibVNCServer 0.9.9 and earlier does not properly handle attempts to send a large amount of ClientCutText data, which allows remote attackers to cause a denial of service (memory consumption or daemon crash) via a crafted message that is processed by using a single unchecked malloc.",
              },
              "help": {
                "markdown": "**Vulnerability CVE-2014-6053**
| Severity | Package | Version | Fix Version | Type | Location | Data Namespace | Link |
| --- | --- | --- | --- | --- | --- | --- | --- |
| medium  | libvncserver  | 0.9.9  |   | apk  | /lib/apk/db/installed  | nvd:cpe  | [CVE-2014-6053](https://nvd.nist.gov/vuln/detail/CVE-2014-6053)  |
",
                "text": "Vulnerability CVE-2014-6053
Severity: medium
Package: libvncserver
Version: 0.9.9
Fix Version: 
Type: apk
Location: /lib/apk/db/installed
Data Namespace: nvd:cpe
Link: [CVE-2014-6053](https://nvd.nist.gov/vuln/detail/CVE-2014-6053)",
              },
              "helpUri": "https://github.com/anchore/grype",
              "id": "CVE-2014-6053-libvncserver",
              "name": "ApkMatcherCpeMatch",
              "properties": {
                "security-severity": "5.0",
              },
              "shortDescription": {
                "text": "CVE-2014-6053 medium vulnerability for libvncserver package",
              },
            },
            {
              "fullDescription": {
                "text": "The rfbProcessClientNormalMessage function in libvncserver/rfbserver.c in LibVNCServer 0.9.9 and earlier allows remote attackers to cause a denial of service (divide-by-zero error and server crash) via a zero value in the scaling factor in a (1) PalmVNCSetScaleFactor or (2) SetScale message.",
              },
              "help": {
                "markdown": "**Vulnerability CVE-2014-6054**
| Severity | Package | Version | Fix Version | Type | Location | Data Namespace | Link |
| --- | --- | --- | --- | --- | --- | --- | --- |
| medium  | libvncserver  | 0.9.9  |   | apk  | /lib/apk/db/installed  | nvd:cpe  | [CVE-2014-6054](https://nvd.nist.gov/vuln/detail/CVE-2014-6054)  |
",
                "text": "Vulnerability CVE-2014-6054
Severity: medium
Package: libvncserver
Version: 0.9.9
Fix Version: 
Type: apk
Location: /lib/apk/db/installed
Data Namespace: nvd:cpe
Link: [CVE-2014-6054](https://nvd.nist.gov/vuln/detail/CVE-2014-6054)",
              },
              "helpUri": "https://github.com/anchore/grype",
              "id": "CVE-2014-6054-libvncserver",
              "name": "ApkMatcherCpeMatch",
              "properties": {
                "security-severity": "4.3",
              },
              "shortDescription": {
                "text": "CVE-2014-6054 medium vulnerability for libvncserver package",
              },
            },
            {
              "fullDescription": {
                "text": "Multiple stack-based buffer overflows in the File Transfer feature in rfbserver.c in LibVNCServer 0.9.9 and earlier allow remote authenticated users to cause a denial of service (crash) and possibly execute arbitrary code via a (1) long file or (2) directory name or the (3) FileTime attribute in a rfbFileTransferOffer message.",
              },
              "help": {
                "markdown": "**Vulnerability CVE-2014-6055**
| Severity | Package | Version | Fix Version | Type | Location | Data Namespace | Link |
| --- | --- | --- | --- | --- | --- | --- | --- |
| medium  | libvncserver  | 0.9.9  |   | apk  | /lib/apk/db/installed  | nvd:cpe  | [CVE-2014-6055](https://nvd.nist.gov/vuln/detail/CVE-2014-6055)  |
",
                "text": "Vulnerability CVE-2014-6055
Severity: medium
Package: libvncserver
Version: 0.9.9
Fix Version: 
Type: apk
Location: /lib/apk/db/installed
Data Namespace: nvd:cpe
Link: [CVE-2014-6055](https://nvd.nist.gov/vuln/detail/CVE-2014-6055)",
              },
              "helpUri": "https://github.com/anchore/grype",
              "id": "CVE-2014-6055-libvncserver",
              "name": "ApkMatcherCpeMatch",
              "properties": {
                "security-severity": "6.5",
              },
              "shortDescription": {
                "text": "CVE-2014-6055 medium vulnerability for libvncserver package",
              },
            },
            {
              "fullDescription": {
                "text": "Version 0.9.9 is affected with an available fix in versions 0.9.11-r0",
              },
              "help": {
                "markdown": "**Vulnerability CVE-2016-9941**
| Severity | Package | Version | Fix Version | Type | Location | Data Namespace | Link |
| --- | --- | --- | --- | --- | --- | --- | --- |
| critical  | libvncserver  | 0.9.9  | 0.9.11-r0  | apk  | /lib/apk/db/installed  | alpine:distro:alpine:3.12  | [CVE-2016-9941](http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2016-9941)  |
",
                "text": "Vulnerability CVE-2016-9941
Severity: critical
Package: libvncserver
Version: 0.9.9
Fix Version: 0.9.11-r0
Type: apk
Location: /lib/apk/db/installed
Data Namespace: alpine:distro:alpine:3.12
Link: [CVE-2016-9941](http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2016-9941)",
              },
              "helpUri": "https://github.com/anchore/grype",
              "id": "CVE-2016-9941-libvncserver",
              "name": "ApkMatcherExactDirectMatch",
              "properties": {
                "security-severity": "9.8",
              },
              "shortDescription": {
                "text": "CVE-2016-9941 critical vulnerability for libvncserver package",
              },
            },
            {
              "fullDescription": {
                "text": "Version 0.9.9 is affected with an available fix in versions 0.9.11-r0",
              },
              "help": {
                "markdown": "**Vulnerability CVE-2016-9942**
| Severity | Package | Version | Fix Version | Type | Location | Data Namespace | Link |
| --- | --- | --- | --- | --- | --- | --- | --- |
| critical  | libvncserver  | 0.9.9  | 0.9.11-r0  | apk  | /lib/apk/db/installed  | alpine:distro:alpine:3.12  | [CVE-2016-9942](http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2016-9942)  |
",
                "text": "Vulnerability CVE-2016-9942
Severity: critical
Package: libvncserver
Version: 0.9.9
Fix Version: 0.9.11-r0
Type: apk
Location: /lib/apk/db/installed
Data Namespace: alpine:distro:alpine:3.12
Link: [CVE-2016-9942](http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2016-9942)",
              },
              "helpUri": "https://github.com/anchore/grype",
              "id": "CVE-2016-9942-libvncserver",
              "name": "ApkMatcherExactIndirectMatch",
              "properties": {
                "security-severity": "9.8",
              },
              "shortDescription": {
                "text": "CVE-2016-9942 critical vulnerability for libvncserver package",
              },
            },
            {
              "fullDescription": {
                "text": "Version 0.9.9 is affected with an available fix in versions 0.9.11-r2",
              },
              "help": {
                "markdown": "**Vulnerability CVE-2018-7225**
| Severity | Package | Version | Fix Version | Type | Location | Data Namespace | Link |
| --- | --- | --- | --- | --- | --- | --- | --- |
| critical  | libvncserver  | 0.9.9  | 0.9.11-r2  | apk  | /lib/apk/db/installed  | alpine:distro:alpine:3.12  | [CVE-2018-7225](http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2018-7225)  |
",
                "text": "Vulnerability CVE-2018-7225
Severity: critical
Package: libvncserver
Version: 0.9.9
Fix Version: 0.9.11-r2
Type: apk
Location: /lib/apk/db/installed
Data Namespace: alpine:distro:alpine:3.12
Link: [CVE-2018-7225](http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2018-7225)",
              },
              "helpUri": "https://github.com/anchore/grype",
              "id": "CVE-2018-7225-libvncserver",
              "name": "ApkMatcherExactDirectMatch",
              "properties": {
                "security-severity": "9.8",
              },
              "shortDescription": {
                "text": "CVE-2018-7225 critical vulnerability for libvncserver package",
              },
            },
            {
              "fullDescription": {
                "text": "Version 0.9.9 is affected with an available fix in versions 0.9.12-r1",
              },
              "help": {
                "markdown": "**Vulnerability CVE-2019-15681**
| Severity | Package | Version | Fix Version | Type | Location | Data Namespace | Link |
| --- | --- | --- | --- | --- | --- | --- | --- |
| high  | libvncserver  | 0.9.9  | 0.9.12-r1  | apk  | /lib/apk/db/installed  | alpine:distro:alpine:3.12  | [CVE-2019-15681](http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2019-15681)  |
",
                "text": "Vulnerability CVE-2019-15681
Severity: high
Package: libvncserver
Version: 0.9.9
Fix Version: 0.9.12-r1
Type: apk
Location: /lib/apk/db/installed
Data Namespace: alpine:distro:alpine:3.12
Link: [CVE-2019-15681](http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2019-15681)",
              },
              "helpUri": "https://github.com/anchore/grype",
              "id": "CVE-2019-15681-libvncserver",
              "name": "ApkMatcherExactDirectMatch",
              "properties": {
                "security-severity": "7.5",
              },
              "shortDescription": {
                "text": "CVE-2019-15681 high vulnerability for libvncserver package",
              },
            },
            {
              "fullDescription": {
                "text": "Version 0.9.9 is affected with an available fix in versions 0.9.13-r0",
              },
              "help": {
                "markdown": "**Vulnerability CVE-2019-20839**
| Severity | Package | Version | Fix Version | Type | Location | Data Namespace | Link |
| --- | --- | --- | --- | --- | --- | --- | --- |
| high  | libvncserver  | 0.9.9  | 0.9.13-r0  | apk  | /lib/apk/db/installed  | alpine:distro:alpine:3.12  | [CVE-2019-20839](http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2019-20839)  |
",
                "text": "Vulnerability CVE-2019-20839
Severity: high
Package: libvncserver
Version: 0.9.9
Fix Version: 0.9.13-r0
Type: apk
Location: /lib/apk/db/installed
Data Namespace: alpine:distro:alpine:3.12
Link: [CVE-2019-20839](http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2019-20839)",
              },
              "helpUri": "https://github.com/anchore/grype",
              "id": "CVE-2019-20839-libvncserver",
              "name": "ApkMatcherExactIndirectMatch",
              "properties": {
                "security-severity": "7.5",
              },
              "shortDescription": {
                "text": "CVE-2019-20839 high vulnerability for libvncserver package",
              },
            },
            {
              "fullDescription": {
                "text": "Version 0.9.9 is affected with an available fix in versions 0.9.13-r0",
              },
              "help": {
                "markdown": "**Vulnerability CVE-2019-20840**
| Severity | Package | Version | Fix Version | Type | Location | Data Namespace | Link |
| --- | --- | --- | --- | --- | --- | --- | --- |
| high  | libvncserver  | 0.9.9  | 0.9.13-r0  | apk  | /lib/apk/db/installed  | alpine:distro:alpine:3.12  | [CVE-2019-20840](http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2019-20840)  |
",
                "text": "Vulnerability CVE-2019-20840
Severity: high
Package: libvncserver
Version: 0.9.9
Fix Version: 0.9.13-r0
Type: apk
Location: /lib/apk/db/installed
Data Namespace: alpine:distro:alpine:3.12
Link: [CVE-2019-20840](http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2019-20840)",
              },
              "helpUri": "https://github.com/anchore/grype",
              "id": "CVE-2019-20840-libvncserver",
              "name": "ApkMatcherExactIndirectMatch",
              "properties": {
                "security-severity": "7.5",
              },
              "shortDescription": {
                "text": "CVE-2019-20840 high vulnerability for libvncserver package",
              },
            },
            {
              "fullDescription": {
                "text": "Version 0.9.9 is affected with an available fix in versions 0.9.13-r0",
              },
              "help": {
                "markdown": "**Vulnerability CVE-2020-14397**
| Severity | Package | Version | Fix Version | Type | Location | Data Namespace | Link |
| --- | --- | --- | --- | --- | --- | --- | --- |
| high  | libvncserver  | 0.9.9  | 0.9.13-r0  | apk  | /lib/apk/db/installed  | alpine:distro:alpine:3.12  | [CVE-2020-14397](http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2020-14397)  |
",
                "text": "Vulnerability CVE-2020-14397
Severity: high
Package: libvncserver
Version: 0.9.9
Fix Version: 0.9.13-r0
Type: apk
Location: /lib/apk/db/installed
Data Namespace: alpine:distro:alpine:3.12
Link: [CVE-2020-14397](http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2020-14397)",
              },
              "helpUri": "https://github.com/anchore/grype",
              "id": "CVE-2020-14397-libvncserver",
              "name": "ApkMatcherExactDirectMatch",
              "properties": {
                "security-severity": "7.5",
              },
              "shortDescription": {
                "text": "CVE-2020-14397 high vulnerability for libvncserver package",
              },
            },
            {
              "fullDescription": {
                "text": "Version 0.9.9 is affected with an available fix in versions 0.9.13-r0",
              },
              "help": {
                "markdown": "**Vulnerability CVE-2020-14399**
| Severity | Package | Version | Fix Version | Type | Location | Data Namespace | Link |
| --- | --- | --- | --- | --- | --- | --- | --- |
| high  | libvncserver  | 0.9.9  | 0.9.13-r0  | apk  | /lib/apk/db/installed  | alpine:distro:alpine:3.12  | [CVE-2020-14399](http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2020-14399)  |
",
                "text": "Vulnerability CVE-2020-14399
Severity: high
Package: libvncserver
Version: 0.9.9
Fix Version: 0.9.13-r0
Type: apk
Location: /lib/apk/db/installed
Data Namespace: alpine:distro:alpine:3.12
Link: [CVE-2020-14399](http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2020-14399)",
              },
              "helpUri": "https://github.com/anchore/grype",
              "id": "CVE-2020-14399-libvncserver",
              "name": "ApkMatcherExactDirectMatch",
              "properties": {
                "security-severity": "7.5",
              },
              "shortDescription": {
                "text": "CVE-2020-14399 high vulnerability for libvncserver package",
              },
            },
            {
              "fullDescription": {
                "text": "Version 0.9.9 is affected with an available fix in versions 0.9.13-r0",
              },
              "help": {
                "markdown": "**Vulnerability CVE-2020-14400**
| Severity | Package | Version | Fix Version | Type | Location | Data Namespace | Link |
| --- | --- | --- | --- | --- | --- | --- | --- |
| high  | libvncserver  | 0.9.9  | 0.9.13-r0  | apk  | /lib/apk/db/installed  | alpine:distro:alpine:3.12  | [CVE-2020-14400](http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2020-14400)  |
",
                "text": "Vulnerability CVE-2020-14400
Severity: high
Package: libvncserver
Version: 0.9.9
Fix Version: 0.9.13-r0
Type: apk
Location: /lib/apk/db/installed
Data Namespace: alpine:distro:alpine:3.12
Link: [CVE-2020-14400](http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2020-14400)",
              },
              "helpUri": "https://github.com/anchore/grype",
              "id": "CVE-2020-14400-libvncserver",
              "name": "ApkMatcherExactDirectMatch",
              "properties": {
                "security-severity": "7.5",
              },
              "shortDescription": {
                "text": "CVE-2020-14400 high vulnerability for libvncserver package",
              },
            },
            {
              "fullDescription": {
                "text": "Version 0.9.9 is affected with an available fix in versions 0.9.13-r0",
              },
              "help": {
                "markdown": "**Vulnerability CVE-2020-14401**
| Severity | Package | Version | Fix Version | Type | Location | Data Namespace | Link |
| --- | --- | --- | --- | --- | --- | --- | --- |
| medium  | libvncserver  | 0.9.9  | 0.9.13-r0  | apk  | /lib/apk/db/installed  | alpine:distro:alpine:3.12  | [CVE-2020-14401](http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2020-14401)  |
",
                "text": "Vulnerability CVE-2020-14401
Severity: medium
Package: libvncserver
Version: 0.9.9
Fix Version: 0.9.13-r0
Type: apk
Location: /lib/apk/db/installed
Data Namespace: alpine:distro:alpine:3.12
Link: [CVE-2020-14401](http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2020-14401)",
              },
              "helpUri": "https://github.com/anchore/grype",
              "id": "CVE-2020-14401-libvncserver",
              "name": "ApkMatcherExactIndirectMatch",
              "properties": {
                "security-severity": "6.5",
              },
              "shortDescription": {
                "text": "CVE-2020-14401 medium vulnerability for libvncserver package",
              },
            },
            {
              "fullDescription": {
                "text": "Version 0.9.9 is affected with an available fix in versions 0.9.13-r0",
              },
              "help": {
                "markdown": "**Vulnerability CVE-2020-14402**
| Severity | Package | Version | Fix Version | Type | Location | Data Namespace | Link |
| --- | --- | --- | --- | --- | --- | --- | --- |
| medium  | libvncserver  | 0.9.9  | 0.9.13-r0  | apk  | /lib/apk/db/installed  | alpine:distro:alpine:3.12  | [CVE-2020-14402](http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2020-14402)  |
",
                "text": "Vulnerability CVE-2020-14402
Severity: medium
Package: libvncserver
Version: 0.9.9
Fix Version: 0.9.13-r0
Type: apk
Location: /lib/apk/db/installed
Data Namespace: alpine:distro:alpine:3.12
Link: [CVE-2020-14402](http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2020-14402)",
              },
              "helpUri": "https://github.com/anchore/grype",
              "id": "CVE-2020-14402-libvncserver",
              "name": "ApkMatcherExactIndirectMatch",
              "properties": {
                "security-severity": "5.5",
              },
              "shortDescription": {
                "text": "CVE-2020-14402 medium vulnerability for libvncserver package",
              },
            },
            {
              "fullDescription": {
                "text": "Version 0.9.9 is affected with an available fix in versions 0.9.13-r0",
              },
              "help": {
                "markdown": "**Vulnerability CVE-2020-14403**
| Severity | Package | Version | Fix Version | Type | Location | Data Namespace | Link |
| --- | --- | --- | --- | --- | --- | --- | --- |
| medium  | libvncserver  | 0.9.9  | 0.9.13-r0  | apk  | /lib/apk/db/installed  | alpine:distro:alpine:3.12  | [CVE-2020-14403](http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2020-14403)  |
",
                "text": "Vulnerability CVE-2020-14403
Severity: medium
Package: libvncserver
Version: 0.9.9
Fix Version: 0.9.13-r0
Type: apk
Location: /lib/apk/db/installed
Data Namespace: alpine:distro:alpine:3.12
Link: [CVE-2020-14403](http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2020-14403)",
              },
              "helpUri": "https://github.com/anchore/grype",
              "id": "CVE-2020-14403-libvncserver",
              "name": "ApkMatcherExactIndirectMatch",
              "properties": {
                "security-severity": "5.5",
              },
              "shortDescription": {
                "text": "CVE-2020-14403 medium vulnerability for libvncserver package",
              },
            },
            {
              "fullDescription": {
                "text": "Version 0.9.9 is affected with an available fix in versions 0.9.13-r0",
              },
              "help": {
                "markdown": "**Vulnerability CVE-2020-14404**
| Severity | Package | Version | Fix Version | Type | Location | Data Namespace | Link |
| --- | --- | --- | --- | --- | --- | --- | --- |
| medium  | libvncserver  | 0.9.9  | 0.9.13-r0  | apk  | /lib/apk/db/installed  | alpine:distro:alpine:3.12  | [CVE-2020-14404](http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2020-14404)  |
",
                "text": "Vulnerability CVE-2020-14404
Severity: medium
Package: libvncserver
Version: 0.9.9
Fix Version: 0.9.13-r0
Type: apk
Location: /lib/apk/db/installed
Data Namespace: alpine:distro:alpine:3.12
Link: [CVE-2020-14404](http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2020-14404)",
              },
              "helpUri": "https://github.com/anchore/grype",
              "id": "CVE-2020-14404-libvncserver",
              "name": "ApkMatcherExactIndirectMatch",
              "properties": {
                "security-severity": "5.5",
              },
              "shortDescription": {
                "text": "CVE-2020-14404 medium vulnerability for libvncserver package",
              },
            },
            {
              "fullDescription": {
                "text": "Version 0.9.9 is affected with an available fix in versions 0.9.13-r0",
              },
              "help": {
                "markdown": "**Vulnerability CVE-2020-14405**
| Severity | Package | Version | Fix Version | Type | Location | Data Namespace | Link |
| --- | --- | --- | --- | --- | --- | --- | --- |
| medium  | libvncserver  | 0.9.9  | 0.9.13-r0  | apk  | /lib/apk/db/installed  | alpine:distro:alpine:3.12  | [CVE-2020-14405](http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2020-14405)  |
",
                "text": "Vulnerability CVE-2020-14405
Severity: medium
Package: libvncserver
Version: 0.9.9
Fix Version: 0.9.13-r0
Type: apk
Location: /lib/apk/db/installed
Data Namespace: alpine:distro:alpine:3.12
Link: [CVE-2020-14405](http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2020-14405)",
              },
              "helpUri": "https://github.com/anchore/grype",
              "id": "CVE-2020-14405-libvncserver",
              "name": "ApkMatcherExactDirectMatch",
              "properties": {
                "security-severity": "6.5",
              },
              "shortDescription": {
                "text": "CVE-2020-14405 medium vulnerability for libvncserver package",
              },
            },
            {
              "fullDescription": {
                "text": "Version 0.9.9 is affected with an available fix in versions 0.9.13-r0",
              },
              "help": {
                "markdown": "**Vulnerability CVE-2020-25708**
| Severity | Package | Version | Fix Version | Type | Location | Data Namespace | Link |
| --- | --- | --- | --- | --- | --- | --- | --- |
| high  | libvncserver  | 0.9.9  | 0.9.13-r0  | apk  | /lib/apk/db/installed  | alpine:distro:alpine:3.12  | [CVE-2020-25708](http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2020-25708)  |
",
                "text": "Vulnerability CVE-2020-25708
Severity: high
Package: libvncserver
Version: 0.9.9
Fix Version: 0.9.13-r0
Type: apk
Location: /lib/apk/db/installed
Data Namespace: alpine:distro:alpine:3.12
Link: [CVE-2020-25708](http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2020-25708)",
              },
              "helpUri": "https://github.com/anchore/grype",
              "id": "CVE-2020-25708-libvncserver",
              "name": "ApkMatcherExactDirectMatch",
              "properties": {
                "security-severity": "7.5",
              },
              "shortDescription": {
                "text": "CVE-2020-25708 high vulnerability for libvncserver package",
              },
            },
          ],
          "version": "",
        },
      },
    },
  ],
  "version": "2.1.0",
}
`;

exports[`SARIF debian 1`] = `
{
  "$schema": "https://docs.oasis-open.org/sarif/sarif/v2.1.0/errata01/os/schemas/sarif-schema-2.1.0.json",
  "runs": [
    {
      "results": [
        {
          "locations": [
            {
              "logicalLocations": [
                {
                  "fullyQualifiedName": "",
                  "name": "/var/lib/dpkg/status",
                },
              ],
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "image//var/lib/dpkg/status",
                },
                "region": {
                  "endColumn": 1,
                  "endLine": 1,
                  "startColumn": 1,
                  "startLine": 1,
                },
              },
            },
          ],
          "message": {
            "text": "The path /var/lib/dpkg/status reports apt at version 1.8.2  which is a vulnerable (deb) package installed in the container",
          },
          "ruleId": "CVE-2011-3374-apt",
        },
        {
          "locations": [
            {
              "logicalLocations": [
                {
                  "fullyQualifiedName": "",
                  "name": "/python/dist-info/METADATA",
                },
                {
                  "fullyQualifiedName": "",
                  "name": "/python/dist-info/top_level.txt",
                },
              ],
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "image//python/dist-info/METADATA",
                },
                "region": {
                  "endColumn": 1,
                  "endLine": 1,
                  "startColumn": 1,
                  "startLine": 1,
                },
              },
            },
          ],
          "message": {
            "text": "The path /python/dist-info/METADATA reports Pygments at version 2.6.1  which is a vulnerable (python) package installed in the container",
          },
          "ruleId": "GHSA-9w8r-397f-prfh-Pygments",
        },
        {
          "locations": [
            {
              "logicalLocations": [
                {
                  "fullyQualifiedName": "",
                  "name": "/ruby/specifications/bundler.gemspec",
                },
              ],
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "image//ruby/specifications/bundler.gemspec",
                },
                "region": {
                  "endColumn": 1,
                  "endLine": 1,
                  "startColumn": 1,
                  "startLine": 1,
                },
              },
            },
          ],
          "message": {
            "text": "The path /ruby/specifications/bundler.gemspec reports bundler at version 2.1.4  which is a vulnerable (gem) package installed in the container",
          },
          "ruleId": "GHSA-fj7f-vq84-fh43-bundler",
        },
        {
          "locations": [
            {
              "logicalLocations": [
                {
                  "fullyQualifiedName": "",
                  "name": "/ruby/specifications/bundler.gemspec",
                },
              ],
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "image//ruby/specifications/bundler.gemspec",
                },
                "region": {
                  "endColumn": 1,
                  "endLine": 1,
                  "startColumn": 1,
                  "startLine": 1,
                },
              },
            },
          ],
          "message": {
            "text": "The path /ruby/specifications/bundler.gemspec reports bundler at version 2.1.4  which is a vulnerable (gem) package installed in the container",
          },
          "ruleId": "GHSA-fp4w-jxhp-m23p-bundler",
        },
        {
          "locations": [
            {
              "logicalLocations": [
                {
                  "fullyQualifiedName": "",
                  "name": "/python/dist-info/METADATA",
                },
                {
                  "fullyQualifiedName": "",
                  "name": "/python/dist-info/top_level.txt",
                },
              ],
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "image//python/dist-info/METADATA",
                },
                "region": {
                  "endColumn": 1,
                  "endLine": 1,
                  "startColumn": 1,
                  "startLine": 1,
                },
              },
            },
          ],
          "message": {
            "text": "The path /python/dist-info/METADATA reports Pygments at version 2.6.1  which is a vulnerable (python) package installed in the container",
          },
          "ruleId": "GHSA-pq64-v7f5-gqh8-Pygments",
        },
      ],
      "tool": {
        "driver": {
          "informationUri": "https://github.com/anchore/grype",
          "name": "grype",
          "rules": [
            {
              "fullDescription": {
                "text": "Version 1.8.2 is affected with no fixes reported yet.",
              },
              "help": {
                "markdown": "**Vulnerability CVE-2011-3374**
| Severity | Package | Version | Fix Version | Type | Location | Data Namespace | Link |
| --- | --- | --- | --- | --- | --- | --- | --- |
| low  | apt  | 1.8.2  |   | deb  | /var/lib/dpkg/status  | debian:distro:debian:8  | [CVE-2011-3374](https://security-tracker.debian.org/tracker/CVE-2011-3374)  |
",
                "text": "Vulnerability CVE-2011-3374
Severity: low
Package: apt
Version: 1.8.2
Fix Version: 
Type: deb
Location: /var/lib/dpkg/status
Data Namespace: debian:distro:debian:8
Link: [CVE-2011-3374](https://security-tracker.debian.org/tracker/CVE-2011-3374)",
              },
              "helpUri": "https://github.com/anchore/grype",
              "id": "CVE-2011-3374-apt",
              "name": "DpkgMatcherExactDirectMatch",
              "properties": {
                "security-severity": "4.3",
              },
              "shortDescription": {
                "text": "CVE-2011-3374 low vulnerability for apt package",
              },
            },
            {
              "fullDescription": {
                "text": "Infinite Loop in Pygments",
              },
              "help": {
                "markdown": "**Vulnerability GHSA-9w8r-397f-prfh**
| Severity | Package | Version | Fix Version | Type | Location | Data Namespace | Link |
| --- | --- | --- | --- | --- | --- | --- | --- |
| high  | Pygments  | 2.6.1  | 2.7.4  | python  | /python/dist-info/METADATA  | github:language:python  | [GHSA-9w8r-397f-prfh](https://github.com/advisories/GHSA-9w8r-397f-prfh)  |
",
                "text": "Vulnerability GHSA-9w8r-397f-prfh
Severity: high
Package: Pygments
Version: 2.6.1
Fix Version: 2.7.4
Type: python
Location: /python/dist-info/METADATA
Data Namespace: github:language:python
Link: [GHSA-9w8r-397f-prfh](https://github.com/advisories/GHSA-9w8r-397f-prfh)",
              },
              "helpUri": "https://github.com/anchore/grype",
              "id": "GHSA-9w8r-397f-prfh-Pygments",
              "name": "PythonMatcherExactDirectMatch",
              "properties": {
                "security-severity": "7.5",
              },
              "shortDescription": {
                "text": "GHSA-9w8r-397f-prfh high vulnerability for Pygments package",
              },
            },
            {
              "fullDescription": {
                "text": "Local Code Execution through Argument Injection via dash leading git url parameter in Gemfile.",
              },
              "help": {
                "markdown": "**Vulnerability GHSA-fj7f-vq84-fh43**
| Severity | Package | Version | Fix Version | Type | Location | Data Namespace | Link |
| --- | --- | --- | --- | --- | --- | --- | --- |
| medium  | bundler  | 2.1.4  | 2.2.33  | gem  | /ruby/specifications/bundler.gemspec  | github:language:ruby  | [GHSA-fj7f-vq84-fh43](https://github.com/advisories/GHSA-fj7f-vq84-fh43)  |
",
                "text": "Vulnerability GHSA-fj7f-vq84-fh43
Severity: medium
Package: bundler
Version: 2.1.4
Fix Version: 2.2.33
Type: gem
Location: /ruby/specifications/bundler.gemspec
Data Namespace: github:language:ruby
Link: [GHSA-fj7f-vq84-fh43](https://github.com/advisories/GHSA-fj7f-vq84-fh43)",
              },
              "helpUri": "https://github.com/anchore/grype",
              "id": "GHSA-fj7f-vq84-fh43-bundler",
              "name": "RubyGemMatcherExactDirectMatch",
              "properties": {
                "security-severity": "9.3",
              },
              "shortDescription": {
                "text": "GHSA-fj7f-vq84-fh43 medium vulnerability for bundler package",
              },
            },
            {
              "fullDescription": {
                "text": "Dependency Confusion in Bundler",
              },
              "help": {
                "markdown": "**Vulnerability GHSA-fp4w-jxhp-m23p**
| Severity | Package | Version | Fix Version | Type | Location | Data Namespace | Link |
| --- | --- | --- | --- | --- | --- | --- | --- |
| high  | bundler  | 2.1.4  | 2.2.10  | gem  | /ruby/specifications/bundler.gemspec  | github:language:ruby  | [GHSA-fp4w-jxhp-m23p](https://github.com/advisories/GHSA-fp4w-jxhp-m23p)  |
",
                "text": "Vulnerability GHSA-fp4w-jxhp-m23p
Severity: high
Package: bundler
Version: 2.1.4
Fix Version: 2.2.10
Type: gem
Location: /ruby/specifications/bundler.gemspec
Data Namespace: github:language:ruby
Link: [GHSA-fp4w-jxhp-m23p](https://github.com/advisories/GHSA-fp4w-jxhp-m23p)",
              },
              "helpUri": "https://github.com/anchore/grype",
              "id": "GHSA-fp4w-jxhp-m23p-bundler",
              "name": "RubyGemMatcherExactDirectMatch",
              "properties": {
                "security-severity": "9.3",
              },
              "shortDescription": {
                "text": "GHSA-fp4w-jxhp-m23p high vulnerability for bundler package",
              },
            },
            {
              "fullDescription": {
                "text": "Regular Expression Denial of Service (ReDoS) in Pygments",
              },
              "help": {
                "markdown": "**Vulnerability GHSA-pq64-v7f5-gqh8**
| Severity | Package | Version | Fix Version | Type | Location | Data Namespace | Link |
| --- | --- | --- | --- | --- | --- | --- | --- |
| high  | Pygments  | 2.6.1  | 2.7.4  | python  | /python/dist-info/METADATA  | github:language:python  | [GHSA-pq64-v7f5-gqh8](https://github.com/advisories/GHSA-pq64-v7f5-gqh8)  |
",
                "text": "Vulnerability GHSA-pq64-v7f5-gqh8
Severity: high
Package: Pygments
Version: 2.6.1
Fix Version: 2.7.4
Type: python
Location: /python/dist-info/METADATA
Data Namespace: github:language:python
Link: [GHSA-pq64-v7f5-gqh8](https://github.com/advisories/GHSA-pq64-v7f5-gqh8)",
              },
              "helpUri": "https://github.com/anchore/grype",
              "id": "GHSA-pq64-v7f5-gqh8-Pygments",
              "name": "PythonMatcherExactDirectMatch",
              "properties": {
                "security-severity": "7.5",
              },
              "shortDescription": {
                "text": "GHSA-pq64-v7f5-gqh8 high vulnerability for Pygments package",
              },
            },
          ],
          "version": "",
        },
      },
    },
  ],
  "version": "2.1.0",
}
`;

exports[`SARIF npm 1`] = `
{
  "$schema": "https://docs.oasis-open.org/sarif/sarif/v2.1.0/errata01/os/schemas/sarif-schema-2.1.0.json",
  "runs": [
    {
      "results": [
        {
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "/package-lock.json",
                },
                "region": {
                  "endColumn": 1,
                  "endLine": 1,
                  "startColumn": 1,
                  "startLine": 1,
                },
              },
            },
          ],
          "message": {
            "text": "The path /package-lock.json reports tar at version 6.1.0  which would result in a vulnerable (npm) package installed",
          },
          "ruleId": "GHSA-3jfq-g458-7qm9-tar",
        },
        {
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "/package-lock.json",
                },
                "region": {
                  "endColumn": 1,
                  "endLine": 1,
                  "startColumn": 1,
                  "startLine": 1,
                },
              },
            },
          ],
          "message": {
            "text": "The path /package-lock.json reports tar at version 6.1.0  which would result in a vulnerable (npm) package installed",
          },
          "ruleId": "GHSA-5955-9wpr-37jh-tar",
        },
        {
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "/package-lock.json",
                },
                "region": {
                  "endColumn": 1,
                  "endLine": 1,
                  "startColumn": 1,
                  "startLine": 1,
                },
              },
            },
          ],
          "message": {
            "text": "The path /package-lock.json reports tar at version 6.1.0  which would result in a vulnerable (npm) package installed",
          },
          "ruleId": "GHSA-9r2w-394v-53qc-tar",
        },
        {
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "/package-lock.json",
                },
                "region": {
                  "endColumn": 1,
                  "endLine": 1,
                  "startColumn": 1,
                  "startLine": 1,
                },
              },
            },
          ],
          "message": {
            "text": "The path /package-lock.json reports tar at version 6.1.0  which would result in a vulnerable (npm) package installed",
          },
          "ruleId": "GHSA-qq89-hq3f-393p-tar",
        },
        {
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "/package-lock.json",
                },
                "region": {
                  "endColumn": 1,
                  "endLine": 1,
                  "startColumn": 1,
                  "startLine": 1,
                },
              },
            },
          ],
          "message": {
            "text": "The path /package-lock.json reports tar at version 6.1.0  which would result in a vulnerable (npm) package installed",
          },
          "ruleId": "GHSA-r628-mhmh-qjhw-tar",
        },
      ],
      "tool": {
        "driver": {
          "informationUri": "https://github.com/anchore/grype",
          "name": "grype",
          "rules": [
            {
              "fullDescription": {
                "text": "Arbitrary File Creation/Overwrite due to insufficient absolute path sanitization",
              },
              "help": {
                "markdown": "**Vulnerability GHSA-3jfq-g458-7qm9**
| Severity | Package | Version | Fix Version | Type | Location | Data Namespace | Link |
| --- | --- | --- | --- | --- | --- | --- | --- |
| high  | tar  | 6.1.0  | 6.1.1  | npm  | /package-lock.json  | github:language:javascript  | [GHSA-3jfq-g458-7qm9](https://github.com/advisories/GHSA-3jfq-g458-7qm9)  |
",
                "text": "Vulnerability GHSA-3jfq-g458-7qm9
Severity: high
Package: tar
Version: 6.1.0
Fix Version: 6.1.1
Type: npm
Location: /package-lock.json
Data Namespace: github:language:javascript
Link: [GHSA-3jfq-g458-7qm9](https://github.com/advisories/GHSA-3jfq-g458-7qm9)",
              },
              "helpUri": "https://github.com/anchore/grype",
              "id": "GHSA-3jfq-g458-7qm9-tar",
              "name": "JavascriptMatcherExactDirectMatch",
              "properties": {
                "security-severity": "8.1",
              },
              "shortDescription": {
                "text": "GHSA-3jfq-g458-7qm9 high vulnerability for tar package",
              },
            },
            {
              "fullDescription": {
                "text": "Arbitrary File Creation/Overwrite on Windows via insufficient relative path sanitization",
              },
              "help": {
                "markdown": "**Vulnerability GHSA-5955-9wpr-37jh**
| Severity | Package | Version | Fix Version | Type | Location | Data Namespace | Link |
| --- | --- | --- | --- | --- | --- | --- | --- |
| high  | tar  | 6.1.0  | 6.1.9  | npm  | /package-lock.json  | github:language:javascript  | [GHSA-5955-9wpr-37jh](https://github.com/advisories/GHSA-5955-9wpr-37jh)  |
",
                "text": "Vulnerability GHSA-5955-9wpr-37jh
Severity: high
Package: tar
Version: 6.1.0
Fix Version: 6.1.9
Type: npm
Location: /package-lock.json
Data Namespace: github:language:javascript
Link: [GHSA-5955-9wpr-37jh](https://github.com/advisories/GHSA-5955-9wpr-37jh)",
              },
              "helpUri": "https://github.com/anchore/grype",
              "id": "GHSA-5955-9wpr-37jh-tar",
              "name": "JavascriptMatcherExactDirectMatch",
              "properties": {
                "security-severity": "8.6",
              },
              "shortDescription": {
                "text": "GHSA-5955-9wpr-37jh high vulnerability for tar package",
              },
            },
            {
              "fullDescription": {
                "text": "Arbitrary File Creation/Overwrite via insufficient symlink protection due to directory cache poisoning using symbolic links",
              },
              "help": {
                "markdown": "**Vulnerability GHSA-9r2w-394v-53qc**
| Severity | Package | Version | Fix Version | Type | Location | Data Namespace | Link |
| --- | --- | --- | --- | --- | --- | --- | --- |
| high  | tar  | 6.1.0  | 6.1.7  | npm  | /package-lock.json  | github:language:javascript  | [GHSA-9r2w-394v-53qc](https://github.com/advisories/GHSA-9r2w-394v-53qc)  |
",
                "text": "Vulnerability GHSA-9r2w-394v-53qc
Severity: high
Package: tar
Version: 6.1.0
Fix Version: 6.1.7
Type: npm
Location: /package-lock.json
Data Namespace: github:language:javascript
Link: [GHSA-9r2w-394v-53qc](https://github.com/advisories/GHSA-9r2w-394v-53qc)",
              },
              "helpUri": "https://github.com/anchore/grype",
              "id": "GHSA-9r2w-394v-53qc-tar",
              "name": "JavascriptMatcherExactDirectMatch",
              "properties": {
                "security-severity": "8.6",
              },
              "shortDescription": {
                "text": "GHSA-9r2w-394v-53qc high vulnerability for tar package",
              },
            },
            {
              "fullDescription": {
                "text": "Arbitrary File Creation/Overwrite via insufficient symlink protection due to directory cache poisoning using symbolic links",
              },
              "help": {
                "markdown": "**Vulnerability GHSA-qq89-hq3f-393p**
| Severity | Package | Version | Fix Version | Type | Location | Data Namespace | Link |
| --- | --- | --- | --- | --- | --- | --- | --- |
| high  | tar  | 6.1.0  | 6.1.9  | npm  | /package-lock.json  | github:language:javascript  | [GHSA-qq89-hq3f-393p](https://github.com/advisories/GHSA-qq89-hq3f-393p)  |
",
                "text": "Vulnerability GHSA-qq89-hq3f-393p
Severity: high
Package: tar
Version: 6.1.0
Fix Version: 6.1.9
Type: npm
Location: /package-lock.json
Data Namespace: github:language:javascript
Link: [GHSA-qq89-hq3f-393p](https://github.com/advisories/GHSA-qq89-hq3f-393p)",
              },
              "helpUri": "https://github.com/anchore/grype",
              "id": "GHSA-qq89-hq3f-393p-tar",
              "name": "JavascriptMatcherExactDirectMatch",
              "properties": {
                "security-severity": "8.6",
              },
              "shortDescription": {
                "text": "GHSA-qq89-hq3f-393p high vulnerability for tar package",
              },
            },
            {
              "fullDescription": {
                "text": "Arbitrary File Creation/Overwrite via insufficient symlink protection due to directory cache poisoning",
              },
              "help": {
                "markdown": "**Vulnerability GHSA-r628-mhmh-qjhw**
| Severity | Package | Version | Fix Version | Type | Location | Data Namespace | Link |
| --- | --- | --- | --- | --- | --- | --- | --- |
| high  | tar  | 6.1.0  | 6.1.2  | npm  | /package-lock.json  | github:language:javascript  | [GHSA-r628-mhmh-qjhw](https://github.com/advisories/GHSA-r628-mhmh-qjhw)  |
",
                "text": "Vulnerability GHSA-r628-mhmh-qjhw
Severity: high
Package: tar
Version: 6.1.0
Fix Version: 6.1.2
Type: npm
Location: /package-lock.json
Data Namespace: github:language:javascript
Link: [GHSA-r628-mhmh-qjhw](https://github.com/advisories/GHSA-r628-mhmh-qjhw)",
              },
              "helpUri": "https://github.com/anchore/grype",
              "id": "GHSA-r628-mhmh-qjhw-tar",
              "name": "JavascriptMatcherExactDirectMatch",
              "properties": {
                "security-severity": "8.1",
              },
              "shortDescription": {
                "text": "GHSA-r628-mhmh-qjhw high vulnerability for tar package",
              },
            },
          ],
          "version": "",
        },
      },
    },
  ],
  "version": "2.1.0",
}
`;

exports[`SARIF yarn 1`] = `
{
  "$schema": "https://docs.oasis-open.org/sarif/sarif/v2.1.0/errata01/os/schemas/sarif-schema-2.1.0.json",
  "runs": [
    {
      "results": [
        {
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "/yarn.lock",
                },
                "region": {
                  "endColumn": 1,
                  "endLine": 1,
                  "startColumn": 1,
                  "startLine": 1,
                },
              },
            },
          ],
          "message": {
            "text": "The path /yarn.lock reports trim at version 0.0.2  which would result in a vulnerable (npm) package installed",
          },
          "ruleId": "GHSA-w5p7-h5w8-2hfq-trim",
        },
      ],
      "tool": {
        "driver": {
          "informationUri": "https://github.com/anchore/grype",
          "name": "grype",
          "rules": [
            {
              "fullDescription": {
                "text": "Regular Expression Denial of Service in trim",
              },
              "help": {
                "markdown": "**Vulnerability GHSA-w5p7-h5w8-2hfq**
| Severity | Package | Version | Fix Version | Type | Location | Data Namespace | Link |
| --- | --- | --- | --- | --- | --- | --- | --- |
| high  | trim  | 0.0.2  | 0.0.3  | npm  | /yarn.lock  | github:language:javascript  | [GHSA-w5p7-h5w8-2hfq](https://github.com/advisories/GHSA-w5p7-h5w8-2hfq)  |
",
                "text": "Vulnerability GHSA-w5p7-h5w8-2hfq
Severity: high
Package: trim
Version: 0.0.2
Fix Version: 0.0.3
Type: npm
Location: /yarn.lock
Data Namespace: github:language:javascript
Link: [GHSA-w5p7-h5w8-2hfq](https://github.com/advisories/GHSA-w5p7-h5w8-2hfq)",
              },
              "helpUri": "https://github.com/anchore/grype",
              "id": "GHSA-w5p7-h5w8-2hfq-trim",
              "name": "JavascriptMatcherExactDirectMatch",
              "properties": {
                "security-severity": "7.5",
              },
              "shortDescription": {
                "text": "GHSA-w5p7-h5w8-2hfq high vulnerability for trim package",
              },
            },
          ],
          "version": "",
        },
      },
    },
  ],
  "version": "2.1.0",
}
`;
